--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ anyio==3.7.1
 click==8.1.7
 colorama==0.4.6
 fastapi==0.103.2
+FastAPI-SQLAlchemy==0.2.1
+geographiclib==2.0
+geopy==2.4.0
+greenlet==3.0.0
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
@@ -11,6 +15,7 @@ pydantic_core==2.10.1
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.21
 starlette==0.27.0
 typing_extensions==4.8.0
 uvicorn==0.23.2
